# GeoDjango

./: pyproject.toml
core/: settings.py
geo_app/: admin.py  models.py
geo_app/migrations/: 0001_initial.py
