[tool.poetry]
name = "geo"
version = "0.1.0"
description = ""
authors = ["Joel-KSanthosh <joelksanthosh02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
